--- a/Scape from Cemitery.vcxproj
+++ b/Scape from Cemitery.vcxproj
@@ -56,6 +56,7 @@
     <ClInclude Include="GhostModel.h" />
     <ClInclude Include="LeftCommand.h" />
     <ClInclude Include="Level.h" />
+    <ClInclude Include="LevelStateHandler.h" />
     <ClInclude Include="MenuBase.h" />
     <ClInclude Include="MenuClickCommand.h" />
     <ClInclude Include="MenuHandler.h" />
@@ -74,6 +75,7 @@
     <ClInclude Include="Projectile.h" />
     <ClInclude Include="ProjectileList.h" />
     <ClInclude Include="RightCommand.h" />
+    <ClInclude Include="SecondLevel.h" />
     <ClInclude Include="Spark.h" />
     <ClInclude Include="Spell.h" />
     <ClInclude Include="SpellsModel.h" />
@@ -115,6 +117,7 @@
     <ClCompile Include="GhostModel.cpp" />
     <ClCompile Include="LeftCommand.cpp" />
     <ClCompile Include="Level.cpp" />
+    <ClCompile Include="LevelStateHandler.cpp" />
     <ClCompile Include="MenuBase.cpp" />
     <ClCompile Include="MenuClickCommand.cpp" />
     <ClCompile Include="MenuHandler.cpp" />
@@ -133,6 +136,7 @@
     <ClCompile Include="ProjectileList.cpp" />
     <ClCompile Include="RightCommand.cpp" />
     <ClCompile Include="Scape From Cemitery.cpp" />
+    <ClCompile Include="SecondLevel.cpp" />
     <ClCompile Include="Spark.cpp" />
     <ClCompile Include="Spell.cpp" />
     <ClCompile Include="SpellsModel.cpp" />
