Terminado Inimigo2/Save/Obstaculos/Construtores

--- a/Scape from Cemitery.vcxproj
+++ b/Scape from Cemitery.vcxproj
@@ -43,12 +43,16 @@
     <ClInclude Include="Collisor.h" />
     <ClInclude Include="CompositeController.h" />
     <ClInclude Include="Controller.h" />
+    <ClInclude Include="Dragon.h" />
+    <ClInclude Include="DragonModel.h" />
     <ClInclude Include="DynamicEntity.h" />
     <ClInclude Include="Enemie.h" />
     <ClInclude Include="EnemiesList.h" />
     <ClInclude Include="EnterCommand.h" />
     <ClInclude Include="Entity.h" />
     <ClInclude Include="EventHandler.h" />
+    <ClInclude Include="Fireball.h" />
+    <ClInclude Include="FireballModel.h" />
     <ClInclude Include="FirstLevel.h" />
     <ClInclude Include="Flame.h" />
     <ClInclude Include="GenericList.h" />
@@ -116,9 +120,13 @@
     <ClCompile Include="ButtonsModel.cpp" />
     <ClCompile Include="Collisor.cpp" />
     <ClCompile Include="CompositeController.cpp" />
+    <ClCompile Include="Dragon.cpp" />
+    <ClCompile Include="DragonModel.cpp" />
     <ClCompile Include="EnemiesList.cpp" />
     <ClCompile Include="EnterCommand.cpp" />
     <ClCompile Include="EventHandler.cpp" />
+    <ClCompile Include="Fireball.cpp" />
+    <ClCompile Include="FireballModel.cpp" />
     <ClCompile Include="FirstLevel.cpp" />
     <ClCompile Include="Flame.cpp" />
     <ClCompile Include="Ghost.cpp" />
