--- a/Scape From Cemitery.vcxproj.filters
+++ b/Scape From Cemitery.vcxproj.filters
@@ -105,9 +105,6 @@
     <ClInclude Include="ArrowModel.h">
       <Filter>Header Files\Models</Filter>
     </ClInclude>
-    <ClInclude Include="Barrage.h">
-      <Filter>Header Files\ConcreteEntity\Projectiles</Filter>
-    </ClInclude>
     <ClInclude Include="Button1p.h">
       <Filter>Header Files\MenuButtons</Filter>
     </ClInclude>
@@ -148,9 +145,6 @@
       <Filter>Header Files\EventHandler</Filter>
     </ClInclude>
     <ClInclude Include="Arrow.h">
-      <Filter>Header Files\ConcreteEntity\Projectiles</Filter>
-    </ClInclude>
-    <ClInclude Include="Flame.h">
       <Filter>Header Files\ConcreteEntity\Projectiles</Filter>
     </ClInclude>
     <ClInclude Include="GenericList.h">
@@ -234,9 +228,6 @@
     <ClInclude Include="Spell.h">
       <Filter>Header Files\ConcreteEntity\Projectiles</Filter>
     </ClInclude>
-    <ClInclude Include="Spark.h">
-      <Filter>Header Files\ConcreteEntity\Projectiles</Filter>
-    </ClInclude>
     <ClInclude Include="Projectile.h">
       <Filter>Header Files\AbstractEntity</Filter>
     </ClInclude>
@@ -314,6 +305,27 @@
     </ClInclude>
     <ClInclude Include="SpikeModel.h">
       <Filter>Header Files\Models</Filter>
+    </ClInclude>
+    <ClInclude Include="DragonModel.h">
+      <Filter>Header Files\Models</Filter>
+    </ClInclude>
+    <ClInclude Include="Fireball.h">
+      <Filter>Header Files\ConcreteEntity\Projectiles</Filter>
+    </ClInclude>
+    <ClInclude Include="Barrage.h">
+      <Filter>Header Files\ConcreteEntity\Projectiles\Spells</Filter>
+    </ClInclude>
+    <ClInclude Include="Flame.h">
+      <Filter>Header Files\ConcreteEntity\Projectiles\Spells</Filter>
+    </ClInclude>
+    <ClInclude Include="Spark.h">
+      <Filter>Header Files\ConcreteEntity\Projectiles\Spells</Filter>
+    </ClInclude>
+    <ClInclude Include="FireballModel.h">
+      <Filter>Header Files\Models</Filter>
+    </ClInclude>
+    <ClInclude Include="Dragon.h">
+      <Filter>Header Files\ConcreteEntity\Enemie</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
@@ -510,6 +522,18 @@
       <Filter>Source Files\Models</Filter>
     </ClCompile>
     <ClCompile Include="MineModel.cpp">
+      <Filter>Source Files\Models</Filter>
+    </ClCompile>
+    <ClCompile Include="Dragon.cpp">
+      <Filter>Source Files\ConcreteEntity\Enemie</Filter>
+    </ClCompile>
+    <ClCompile Include="DragonModel.cpp">
+      <Filter>Source Files\Models</Filter>
+    </ClCompile>
+    <ClCompile Include="Fireball.cpp">
+      <Filter>Source Files\ConcreteEntity\Projectiles</Filter>
+    </ClCompile>
+    <ClCompile Include="FireballModel.cpp">
       <Filter>Source Files\Models</Filter>
     </ClCompile>
   </ItemGroup>
