--- a/Scape From Cemitery.vcxproj.filters
+++ b/Scape From Cemitery.vcxproj.filters
@@ -328,7 +328,7 @@
       <Filter>Header Files\ConcreteEntity\Enemie</Filter>
     </ClInclude>
     <ClInclude Include="HUDModel.h">
-      <Filter>Header Files</Filter>
+      <Filter>Header Files\Models</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
@@ -540,7 +540,7 @@
       <Filter>Source Files\Models</Filter>
     </ClCompile>
     <ClCompile Include="HUDModel.cpp">
-      <Filter>Source Files</Filter>
+      <Filter>Source Files\Models</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
