--- a/Scape From Cemitery.vcxproj.filters
+++ b/Scape From Cemitery.vcxproj.filters
@@ -330,6 +330,9 @@
     <ClInclude Include="HUDModel.h">
       <Filter>Header Files\Models</Filter>
     </ClInclude>
+    <ClInclude Include="TilesetModel.h">
+      <Filter>Header Files\Models</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Principal.cpp">
@@ -540,6 +543,9 @@
       <Filter>Source Files\Models</Filter>
     </ClCompile>
     <ClCompile Include="HUDModel.cpp">
+      <Filter>Source Files\Models</Filter>
+    </ClCompile>
+    <ClCompile Include="TilesetModel.cpp">
       <Filter>Source Files\Models</Filter>
     </ClCompile>
   </ItemGroup>
